# entrance_trial

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sql/: create_tables.sql
src/: db.py  kernel.py  models.py  run.py  schemas.py  service.py  tasks.py
tests/: test_views.py
